--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.iqonic.servicebooking"
+    namespace "sohaib.user.handymanjob"
     compileSdkVersion 34
     ndkVersion = "27.0.12077973"
     java.toolchain.languageVersion = JavaLanguageVersion.of(21)
@@ -50,11 +50,11 @@ android {
     }
 
     defaultConfig {
-        applicationId 'com.iqonic.servicebooking'
+        applicationId 'sohaib.user.handymanjob'
         minSdkVersion 23
         targetSdkVersion 34
-        versionCode 95
-        versionName '11.10.0'
+        versionCode 1
+        versionName '1.0'
     }
     
     signingConfigs {
