--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="Handyman Service User"
+        android:label="Handyman Job"
         android:requestLegacyExternalStorage="true"
         tools:replace="android:label">
         <meta-data
