Update key.properties with new credentials and store file path

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=
-keyPassword=
-keyAlias=
-storeFile=
+storePassword=$Ameer.com12
+keyPassword=$Ameer.com12
+keyAlias=$Ameer.com12
+storeFile=/home/sohaib/Desktop/Handyman
